wp-content/plugins/aras-marketplace/ui/src/scss/_contributor-page.scss
.mp-contributor-banner {
	padding: 1.5rem 0;
	width: 100%;
	background-color: #f6f6f6;
	&__logo {
		max-height: 60px;
		width: auto;
	}
	&__title {
		margin-bottom: 0;
		font-size: 2.5rem;
		font-weight: 500;
	}
}

.mp-contributor-page {

	display: flex;
	flex-direction: column;
	gap: 2em;
	
	&__description p {
		flex-shrink: 0;
		font-size: 1.2rem;
	}

	&__columns {
		display: flex;
		width: 100%;
		margin: 0 auto;
		gap: 3rem;
		flex-direction: column;
		flex-wrap: wrap;

		@media( min-width: 900px ){
			flex-direction: row;
			flex-wrap: nowrap;
		}
	}

	h2 {
		font-size: 1.3rem;
		font-weight: 500;
	}

	&__contact-column {
		display: flex;
		flex-direction: column;
		gap: 1.5rem;
		@media( min-width: 900px ){
			width: 25%;
			min-width: 220px;
			flex-grow: 0;
			flex-shrink: 0;
		}
	}

	&__contact-blocks {
		display: grid;
		gap: 1rem;
		@media( min-width: 600px ){
			grid-template-columns: 1fr 1fr;
		}
		@media( min-width: 900px ){
			grid-template-columns: 1fr;
		}
	}

	&__contact-block {
		display: flex;
		flex-direction: row;
		gap: 1rem;

		&--address {
			grid-row: span 4;
		}

		a[target="_blank"]:not(.no-external-icon) {
			position: relative;
		}
		a[target="_blank"]:not(.no-external-icon)::after {
			content: '';
			display: inline-block;
			width: 14px;
			height: 14px;
			position: absolute;
			bottom: 0.5em;
			margin-left: 4px;
			background-image: url('data:image/svg+xml,<%3Fxml version="1.0" encoding="utf-8"%3F><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools --><svg width="800px" height="800px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="Interface / External_Link"><path id="Vector" d="M10.0002 5H8.2002C7.08009 5 6.51962 5 6.0918 5.21799C5.71547 5.40973 5.40973 5.71547 5.21799 6.0918C5 6.51962 5 7.08009 5 8.2002V15.8002C5 16.9203 5 17.4801 5.21799 17.9079C5.40973 18.2842 5.71547 18.5905 6.0918 18.7822C6.5192 19 7.07899 19 8.19691 19H15.8031C16.921 19 17.48 19 17.9074 18.7822C18.2837 18.5905 18.5905 18.2839 18.7822 17.9076C19 17.4802 19 16.921 19 15.8031V14M20 9V4M20 4H15M20 4L13 11" stroke="%23000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></g></svg>');
			background-size: contain;

		}
	}

	&__contact-icon {
		width: 1.4em;
		height: 1.4em;
		flex-shrink: 0;
		color: #777;
		
		display: flex;
		justify-content: center;
		svg {
			max-height: 100%;
			max-width: 100%;
			fill: currentColor !important
		}
	}

	&__social-links {
		display: flex;
		gap: 0.5rem;
	}
	&__social-link {
		width: 1.5rem;
		height: 1.5rem;
		display: flex;
		justify-content: center;
		align-items: center;
		color: #666;
		&:hover {
			color: var(--mp-color-brand);
		}
		svg {
			fill: currentColor;
			max-width: 100%;
			max-height: 100%;
			width: auto;
			height: auto;
		}
	}

	&__website {
		font-weight: 600;
	}

	&__content-column {
		display: flex;
		flex-direction: column;
		gap: 1rem;
		flex-grow: 1;
		width: 100%;
	}

	
}

